<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.buysellapp.ui.home.HomeContainerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_container" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.buysellapp.ui.my_ads.MyAdsContainerFragment"
        android:label="@string/my_ads"
        tools:layout="@layout/fragment_my_ads_container" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.buysellapp.ui.profile.ProfileFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_profile" />
</navigation>
