<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:layout_width="30dp"
        android:id="@+id/back_button"
        android:layout_height="30dp"
        android:stateListAnimator="@null"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_arrow_back_black_24dp"/>
<androidx.core.widget.NestedScrollView
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/home_layout_top_2_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:background="@color/White"
            app:layout_scrollFlags="scroll">



            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/show_ads_item_image"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@drawable/edit_text_sell_frag"
                android:contentDescription="@string/image_add" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_title"
                android:hint="@string/title"
                android:fontFamily="@font/cabin"
                android:textColor="@color/Main_blue"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_category"
                android:text="@string/category"
                android:textStyle="italic"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_price"
                android:hint="@string/price"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/Black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_posted_by"
                android:hint="@string/username"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/Black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_email"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/Black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_ads_description"
                android:hint="@string/description"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/Black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/add_a_public_comment"
                    android:id="@+id/comment_edit_text"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@color/White"
                    android:src="@drawable/ic_send_black_24dp"
                    android:id="@+id/add_comment_button"
                    />



            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment_recycler_view"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:visibility="visible"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>







</androidx.core.widget.NestedScrollView>
</LinearLayout>