<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_username"
                android:inputType="text"
                android:hint="@string/enter_username" />
        </com.google.android.material.textfield.TextInputLayout>

        !-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintEnabled="false"
            android:layout_marginBottom="12dp">
            <EditText android:id="@+id/signup_email"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="match_parent"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">
            <EditText android:id="@+id/signup_password"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@drawable/button_background"
            android:textColor="@drawable/button_textcolor"
            android:text="@string/sign_up"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>