<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@color/PureWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                 />

            <!--            <ImageView android:src="@drawable/logo"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="72dp"-->
            <!--                android:layout_marginBottom="24dp"-->
            <!--                android:layout_gravity="center_horizontal" />-->

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp">
                <EditText android:id="@+id/login_email"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_email"
                    android:layout_width="match_parent"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintEnabled="false"
                android:layout_marginBottom="12dp">
                <EditText android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/enter_password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/button_background"
                android:textColor="@drawable/button_textcolor"
                android:text="@string/log_in"/>

            <Button
                android:id="@+id/log_btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="12dp"
                android:background="@drawable/button_rev_background"
                android:textColor="@drawable/button_rev_textcolor"
                android:text="@string/sign_up"/>

            <!--            <TextView-->
            <!--                android:id="@+id/link_signup"-->
            <!--                android:layout_width="fill_parentandroid:text="Login with Facebook""-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="24dp"-->
            <!--                android:gravity="center"-->
            <!--                android:text="No account yet? Create one"-->
            <!--                android:textSize="16dp" />-->

        </LinearLayout>

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/fb_login_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:layout_marginBottom="30dp" />-->

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/sign_in_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"/>-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>